--- a/files/templates/base.html
+++ b/files/templates/base.html
@@ -17,7 +17,8 @@
 {% if request.user.is_authenticated %}
 
 <div class="container d-flex flex-column flex-md-row align-items-center pb-3 mb-4 border-bottom">
-    <a href="/" class="d-flex align-items-center link-body-emphasis text-decoration-none">
+
+    <a href=" {% url 'account:dashboard' %}" class="d-flex align-items-center link-body-emphasis text-decoration-none">
         <span class="fs-4">REDS</span>
     </a>
 
