--- a/files/templates/base.html
+++ b/files/templates/base.html
@@ -35,14 +35,14 @@
         <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="{% url 'files:myfiles' %}">Мои файлы</a>
     </nav>
 </div>
-<div class="container">
+<div class="container ">
     {% endif %}
 
     {% if request.user.is_authenticated %}
     Hello {{ request.user.first_name|default:request.user.username }} Role: {{user.role}},
-    <a href="{% url 'logout' %}">Logout</a>
+    <a href="{% url 'logout' %}">Выйти</a>
     {% else %}
-    <a href="{% url 'login' %}">Log-in</a>
+    <a href="{% url 'login' %}">Войти</a>
     {% endif %}
 
     {% block body %}
