del  organisation order order pdf

--- a/orders/templates/orderpay.html
+++ b/orders/templates/orderpay.html
@@ -20,7 +20,7 @@
                 <td>{{ Orders.paid }}</td>
                 <td>{{ Orders.total_price }} руб.</td>
                 <td>{{ Orders.status }}</td>
-                <td><a href="/media/{{Orders.order_pdf_file}}">Скачать счет</a></td>
+<!--                <td><a href="/media/{{Orders.order_pdf_file}}">Скачать счет</a></td>-->
 
                 <td>
                     <button type="submit" class="btn btn-primary"
