--- a/orders/templates/add_files_in_order.html
+++ b/orders/templates/add_files_in_order.html
@@ -1,7 +1,7 @@
 {% extends 'base.html'%}
 <title>{% block title %} {{current_order}} {% endblock %}</title>
 {% block body %}
-<h3>{{current_order}}</h3>
+<h1>{{current_order}}</h1>
 <hr>
 <div class="row">
     <div class="col-md-12">
@@ -124,7 +124,7 @@
                     onClick="location.href='{% url 'orders:order_pay' Orders.id %}'">Оформить заказ</button>
         </td>
 {% else %}
-                    <td><a href="/media/{{Orders.order_pdf_file}}">Скачать счет</a></td>
+<!--                    <td><a href="/media/{{Orders.order_pdf_file}}">Скачать счет</a></td>-->
                     <td><a href="{{Orders.pay_link}}">Оплатить картой</a></td>
 
 {% endif %}
