add new templates

--- a/files/templates/calculator.html
+++ b/files/templates/calculator.html
@@ -3,16 +3,32 @@
 
 <title>{% block title %} Калькулятор {% endblock %}</title>
 {% block body %}
-<h2>Калькулятор печати</h2>
+<div class="container-fluid">
 
-<form action="{% url 'files:calculator' %}" method="post", enctype="multipart/form-data">
-    {% csrf_token %}
-    {{ form|crispy }}
+    <!-- Page Heading -->
+    <h1 class="h3 mb-2 text-gray-800">Калькулятор печати</h1>
+    <p class="mb-4">Выберите материал, укажите обработку если есть введите размер и нажмите кнопку "Посчитать"</p>
 
-    <button type="submit" class="btn btn-primary">Посчитать</button>
+<div class="card shadow mb-4">
+    <div class="card-header py-3">
+        <h6 class="m-0 font-weight-bold text-primary">Финишная обработка:</h6>
+    </div>
+    <div class="card-body">
+        <div class="table-responsive">
+            <form action="{% url 'files:calculator' %}" method="post", enctype="multipart/form-data">
+                {% csrf_token %}
+                {{ form|crispy }}
 
-</form>
+                <button type="submit" class="btn btn-primary">Посчитать</button>
 
-<h5>Сумма заказа: {{results}} руб.</h5>
+            </form>
+
+            <h5>Сумма заказа: {{results}} руб.</h5>
+
+
+        </div>
+         </div>
+<!--</div>-->
+<!--         </div>-->
 
 {% endblock %}
