--- a/account/templates/profile_list.html
+++ b/account/templates/profile_list.html
@@ -2,8 +2,8 @@
 <title>{% block title %} Организации: {% endblock %}</title>
 {% block body %}
 
-    <h1>Мои организации: </h1>
-<p><a href="{% url 'account:create_organisation' %}">Добавить организацию</a>
+    <h1>Мои профиль: </h1>
+<p><a href="{% url 'account:create_organisation' %}">Редачить</a>
 
 <hr>
 <div class="row">
@@ -22,19 +22,17 @@
                                                 </tr>
                                             </thead>
 
-     {% for oraganisation in object_list %}
+     {% for item in object_list %}
 
                                             <tbody>
                                                 <tr>
-                                                    <td>{{ oraganisation.id }}</td>
-                                                    <td>{{ oraganisation.name_ul }}</td>
-                                                    <td>{{ oraganisation.address_ur }}</td>
-                                                    <td>{{ oraganisation.phone }}</td>
-                                                    <td>{{ oraganisation.inn }}</td>
-                                                    <td>{{ oraganisation.kpp }}</td>
-                                                    <td>{{ oraganisation.okpk }}</td>
-                                                    <td><a href="{% url 'account:update_organisation_user' oraganisation.id %}">Изменить</a></td>
-                                                    <td><a href="{% url 'account:delete_organisation_user' oraganisation.id %}">Удалить</a></td>
+                                                    <td>{{ item.id }}</td>
+                                                    <td>{{ item.date_of_birth }}</td>
+                                                    <td>{{ item.photo }}</td>
+                                                    <td>{{ item.phone }}</td>
+                                                    <td>{{ item.phone }}</td>
+                                                    <td>{{ item.telegram }}</td>
+<!--                                                    <td>{{ oraganisation.okpk }}</td>-->
                 </tr>
         {% endfor %}
             </tbody>
