--- a/account/templates/registration/login.html
+++ b/account/templates/registration/login.html
@@ -43,16 +43,14 @@
                                         <h1 class="h4 text-gray-900 mb-4">Welcome Back!</h1>
                                     </div>
                                     <form class="user"  action="{% url 'login' %}" method="post">
-                    {% csrf_token %}
+                                    {% csrf_token %}
                                         <div class="form-group">
                                             <input type="text" name="username" class="form-control form-control-user"
                                                 id="exampleInputEmail" aria-describedby="emailHelp"
                                                 placeholder="Enter Email Address...">
                                         </div>
                                         <div class="form-group">
-                                            <input type="password" name="password" class="form-control form-control-user"
-
-                                                >
+                                            <input type="password" name="password" class="form-control form-control-user">
                                                                                      {{form.errors}}
 
                                         </div>
