--- a/files/templates/fail_pay.html
+++ b/files/templates/fail_pay.html
@@ -4,8 +4,16 @@
     <meta charset="UTF-8">
     <title>Оплата не прошла!</title>
 </head>
-<body>
-<h1>    Оплата не прошла!
-</h1>
-</body>
-</html>
+
+
+{% extends 'base.html'%}
+
+{% block body %}
+<div class="container-fluid">
+
+    <!-- Page Heading -->
+    <h1 class="h3 mb-2 text-gray-800">Оплата не прошла!
+ </h1>
+        </div>
+
+{% endblock %}
