--- a/account/static/css/sb-admin-2.css
+++ b/account/static/css/sb-admin-2.css
@@ -10860,14 +10860,10 @@ a:focus {
   }
 }
 
-.bg-login-image {
-  background: url("https://source.unsplash.com/K4mSJ7kc0As/600x800");
-  background-position: center;
-  background-size: cover;
-}
+
 
 .bg-register-image {
-  background: url("https://source.unsplash.com/Mv9hjnEUHR4/600x800");
+  background: url("/static/account/img/print_login.jpg");
   background-position: center;
   background-size: cover;
 }
