--- a/account/templates/account/edit.html
+++ b/account/templates/account/edit.html
@@ -3,13 +3,27 @@
 
 {% block title %}Редактировать профиль{% endblock %}
 {% block body %}
-<h1>Редактировать профиль</h1>
-<p>You can edit your account using the following form:</p>
-<form method="post" enctype="multipart/form-data">
-    {{ user_form|crispy }}
-    {{ profile_form|crispy}}
-    {% csrf_token %}
-    <button type="submit" class="btn btn-primary">Изменить</button>
 
-</form>
+
+<div class="card shadow mb-4">
+    <!-- Card Header - Accordion -->
+
+    <!-- Card Content - Collapse -->
+    <div class="collapse show" id="collapseCardExample">
+        <div class="card-body">
+            <h1>Редактировать профиль</h1>
+            <form method="post" enctype="multipart/form-data">
+                {{ user_form|crispy }}
+                {{ profile_form|crispy}}
+                {% csrf_token %}
+                <button type="submit" class="btn btn-primary">Изменить</button>
+
+            </form>
+        </div>
+    </div>
+</div>
+
+
+<!-- /.container-fluid -->
+
 {% endblock %}
