--- a/files/templates/base.html
+++ b/files/templates/base.html
@@ -72,6 +72,8 @@
                         <h6 class="collapse-header">Мои заказы:</h6>
                         <a class="collapse-item" href="{% url 'orders:new_order' %}">Новый заказ</a>
                         <a class="collapse-item" href="{% url 'orders:view_orders'%}">Заказы</a>
+                         <a class="collapse-item" href="{% url 'files:myfiles' %}">Мои файлы</a>
+                        <a class="collapse-item" href="{% url 'files:create_files' %}">Загрузить файл</a>
                     </div>
                 </div>
             </li>
@@ -87,12 +89,10 @@
                     data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
                         <h6 class="collapse-header">Мой профиль:</h6>
-                        <a class="collapse-item" href="utilities-color.html">Посмотреть</a>
                         <a class="collapse-item" href="{% url 'account:edit_profile' %}">Изменить</a>
                         <a class="collapse-item" href="utilities-animation.html">Адреса доставки</a>
                         <a class="collapse-item" href="{% url 'account:list_organisation' %}">Организации</a>
                         <a class="collapse-item" href="{% url 'account:create_organisation' %}">Добавить организацию</a>
-
                         <a class="collapse-item" href="{% url 'password_change' %}">Сменить пароль</a>
                     </div>
                 </div>
@@ -111,31 +111,28 @@
                 <a class="nav-link" href="#" data-toggle="collapse" data-target="#collapsePages" aria-expanded="true"
                     aria-controls="collapsePages">
                     <i class="fas fa-fw fa-folder"></i>
-                    <span>Файлы</span>
+                    <span>Доставка</span>
                 </a>
                 <div id="collapsePages" class="collapse" aria-labelledby="headingPages"
                     data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
                         <h6 class="collapse-header">Login Screens:</h6>
-                        <a class="collapse-item" href="{% url 'files:myfiles' %}">Мои файлы</a>
-                        <a class="collapse-item" href="{% url 'files:create_files' %}">Загрузить файл</a>
-                        <a class="collapse-item" href="forgot-password.html">Forgot Password</a>
-                        <div class="collapse-divider"></div>
-                        <h6 class="collapse-header">Other Pages:</h6>
-                        <a class="collapse-item" href="404.html">404 Page</a>
-                        <a class="collapse-item active" href="blank.html">Blank Page</a>
+                        <a class="collapse-item" href="{% url 'files:myfiles' %}">Адреса</a>
+                        <a class="collapse-item" href="{% url 'files:create_files' %}">Добавить адрес</a>
+                        <a class="collapse-item" href="{% url 'files:create_files' %}">Удалить адрес</a>
                     </div>
                 </div>
             </li>
 
             <!-- Nav Item - Charts -->
-            <li class="nav-item">
-                <a class="nav-link" href="charts.html">
-                    <i class="fas fa-fw fa-chart-area"></i>
-                    <span>Charts</span></a>
-            </li>
+<!--            <li class="nav-item">-->
+<!--                <a class="nav-link" href="charts.html">-->
+<!--                    <i class="fas fa-fw fa-chart-area"></i>-->
+<!--                    <span>Доставка</span></a>-->
+<!--            </li>-->
 
-            <!-- Nav Item - Tables -->
+
+
             <li class="nav-item">
                 <a class="nav-link" href="{% url 'files:price' %}">
                     <i class="fas fa-fw fa-table"></i>
