--- a/account/templates/registration/register.html
+++ b/account/templates/registration/register.html
@@ -70,7 +70,7 @@
                                 </div>
                             </div>
 
-                            <button type="submit" class="btn btn-primary btn-user btn-block">Зарегистрироваться~
+                            <button type="submit" class="btn btn-primary btn-user btn-block">Зарегистрироваться
                             </button>
 
 
