--- a/orders/templates/add_files_in_order.html
+++ b/orders/templates/add_files_in_order.html
@@ -9,7 +9,7 @@
             <thead>
             <tr>
                 <th>Дата</th>
-                <th>Плательщик</th>
+<!--                <th>Плательщик</th>-->
                 <th>Оплата</th>
                 <th>Сумма</th>
                 <th>Статус</th>
@@ -19,7 +19,7 @@
 
             <tr>
                 <td>{{ Orders.created }}</td>
-                <td>{{ Orders.organisation_payer }}</td>
+<!--                <td>{{ Orders.organisation_payer }}</td>-->
                 <td>{{ Orders.paid }}</td>
                 <td>{{ Orders.total_price }}</td>
                 <td>{{ Orders.status }}</td>
