--- a/files/templates/base.html
+++ b/files/templates/base.html
@@ -391,7 +391,7 @@
         <footer class="sticky-footer bg-white">
             <div class="container my-auto">
                 <div class="copyright text-center my-auto">
-                    <span>Copyright &copy; Your Website 2012-2023</span>
+                    <span>Copyright &copy; REDS 2012-2023</span>
                 </div>
             </div>
         </footer>
