--- a/orders/templates/orders/fail_pay.html
+++ b/orders/templates/orders/fail_pay.html
@@ -1,3 +1,5 @@
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -9,6 +11,16 @@
 {% extends 'base.html'%}
 
 {% block body %}
+  <!-- DataTales Example -->
+    <div class="card shadow mb-4">
+        <div class="card-header py-3">
+            <h6 class="m-0 font-weight-bold text-primary">Оплата не прошла!</h6>
+        </div>
+        <div class="card-body">
+
+
+        </div>
+    </div>
 <div class="container-fluid">
 
     <!-- Page Heading -->
