--- a/orders/templates/orders/success_pay.html
+++ b/orders/templates/orders/success_pay.html
@@ -9,6 +9,16 @@
 {% extends 'base.html'%}
 
 {% block body %}
+  <!-- DataTales Example -->
+    <div class="card shadow mb-4">
+        <div class="card-header py-3">
+            <h6 class="m-0 font-weight-bold text-primary">Оплата успешно проведена!</h6>
+        </div>
+        <div class="card-body">
+
+
+        </div>
+    </div>
 <div class="container-fluid">
 
     <!-- Page Heading -->
