--- a/account/templates/organisation_list.html
+++ b/account/templates/organisation_list.html
@@ -2,43 +2,50 @@
 <title>{% block title %} Организации: {% endblock %}</title>
 {% block body %}
 
-    <h1>Мои организации: </h1>
-<p><a href="{% url 'account:create_organisation' %}">Добавить организацию</a>
+<h1>Мои организации: </h1>
 
-<hr>
+
+<a href="{% url 'account:create_organisation' %}" class="btn btn-primary btn-icon-split">
+                                        <span class="icon text-white-50">
+                                            <i class="fas fa-flag"></i>
+                                        </span>
+    <span class="text">Добавить организацию</span>
+</a>
+
+
 <div class="row">
     <div class="col-md-12">
         <table class="table table-striped table-hover">
             <thead>
             <tr>
 
-                                                    <th scope="col">№</th>
-                                                    <th scope="col">Название</th>
-                                                    <th scope="col">Адрес</th>
-                                                    <th scope="col">Тел</th>
-                                                    <th scope="col">ИНН</th>
-                                                    <th scope="col">КПП</th>
-                                                    <th scope="col">ОКПО:</th>
-                                                </tr>
-                                            </thead>
+                <th scope="col">№</th>
+                <th scope="col">Название</th>
+                <th scope="col">Адрес</th>
+                <th scope="col">Тел</th>
+                <th scope="col">ИНН</th>
+                <th scope="col">КПП</th>
+                <th scope="col">ОКПО:</th>
+            </tr>
+            </thead>
 
-     {% for oraganisation in object_list %}
+            {% for oraganisation in object_list %}
 
-                                            <tbody>
-                                                <tr>
-                                                    <td>{{ oraganisation.id }}</td>
-                                                    <td>{{ oraganisation.name_ul }}</td>
-                                                    <td>{{ oraganisation.address_ur }}</td>
-                                                    <td>{{ oraganisation.phone }}</td>
-                                                    <td>{{ oraganisation.inn }}</td>
-                                                    <td>{{ oraganisation.kpp }}</td>
-                                                    <td>{{ oraganisation.okpk }}</td>
-                                                    <td><a href="{% url 'account:update_organisation_user' oraganisation.id %}">Изменить</a></td>
-                                                    <td><a href="{% url 'account:delete_organisation_user' oraganisation.id %}">Удалить</a></td>
-                </tr>
-        {% endfor %}
+            <tbody>
+            <tr>
+                <td>{{ oraganisation.id }}</td>
+                <td>{{ oraganisation.name_ul }}</td>
+                <td>{{ oraganisation.address_ur }}</td>
+                <td>{{ oraganisation.phone }}</td>
+                <td>{{ oraganisation.inn }}</td>
+                <td>{{ oraganisation.kpp }}</td>
+                <td>{{ oraganisation.okpk }}</td>
+                <td><a href="{% url 'account:update_organisation_user' oraganisation.id %}">Изменить</a></td>
+                <td><a href="{% url 'account:delete_organisation_user' oraganisation.id %}">Удалить</a></td>
+            </tr>
+            {% endfor %}
             </tbody>
-    </table>
+        </table>
     </div>
 </div>
 
