--- a/files/templates/base.html
+++ b/files/templates/base.html
@@ -90,9 +90,8 @@
                     <div class="bg-white py-2 collapse-inner rounded">
                         <h6 class="collapse-header">Мой профиль:</h6>
                         <a class="collapse-item" href="{% url 'account:edit_profile' %}">Изменить</a>
-                        <a class="collapse-item" href="utilities-animation.html">Адреса доставки</a>
+                        <a class="collapse-item" href="{% url 'account:delivery_list' %}">Адреса доставки</a>
                         <a class="collapse-item" href="{% url 'account:list_organisation' %}">Организации</a>
-                        <a class="collapse-item" href="{% url 'account:create_organisation' %}">Добавить организацию</a>
                         <a class="collapse-item" href="{% url 'password_change' %}">Сменить пароль</a>
                     </div>
                 </div>
