--- a/orders/templates/view_orders.html
+++ b/orders/templates/view_orders.html
@@ -23,7 +23,8 @@
 <!--                <th>Дата готовности</th>-->
            </thead>
             <tbody>
-            {% for order in Orders %}
+            {% for order in page_obj %}
+
             <tr>
                 <td>{{ order.id }}</td>
                 <td>{{ order.total_price }} руб. </td>
@@ -55,5 +56,33 @@
     </table>
     </div>
 </div>
+
+<!--PAGIATION-->
+    {% if page_obj.has_other_pages %}
+    <nav aria-label="...">
+        <ul class="pagination">
+            {% if page_obj.has_previous %}
+            <li class="page-item">
+                <a class="page-link" href="?page={{page_obj.previous_page_number}}">Предыдущая</a>
+            </li>
+            {% endif %}
+            {% for p in page_obj.paginator.page_range %}
+            {% if page_obj.number == p %}
+            <li class="page-item active" aria-current="page"><a class="page-link" href="{{ p }}">{{ p }}</a></li>
+            {% elif p >= page_obj.number|add:-2 and p <= page_obj.number|add:2 %}
+            <li class="page-item"><a class="page-link" href="?page={{ p }}"> {{ p }}</a></li>
+            {% endif %}
+            {% endfor %}
+            {% if page_obj.has_next %}
+            <li class="page-item active" aria-current="page">
+                <a class="page-link" href="?page={{page_obj.next_page_number}}">Следующая</a>
+            </li>
+            {% endif %}
+
+        </ul>
+    </nav>
+    {% endif %}
+<!--END PAGINATIONA-->
+
     {% endif %}
     {% endblock %}
