--- a/orders/templates/add_files_in_order.html
+++ b/orders/templates/add_files_in_order.html
@@ -18,9 +18,23 @@
             <tbody>
 
             <tr>
-                <td>{{ Orders.created }}</td>
+                <td>
+
+                    {{ Orders.created }}</td>
 <!--                <td>{{ Orders.organisation_payer }}</td>-->
-                <td>{{ Orders.paid }}</td>
+                <td>
+
+                    {% if Orders.paid == False %}
+                    <div class="mb-2">
+                        <code>Не оплачено</code>
+
+                    </div>
+                    {% else%}
+                    <div class="text-success mb-2">Оплачено
+                    </div>
+                    {% endif %}
+
+                </td>
                 <td>{{ Orders.total_price }}</td>
                 <td>{{ Orders.status }}</td>
                 <td>{{ Orders.delivery }}</td>
