--- a/orders/templates/orderpay.html
+++ b/orders/templates/orderpay.html
@@ -8,7 +8,7 @@
             <thead>
             <tr>
                 <th>Дата</th>
-                <th>Платильщик</th>
+<!--                <th>Платильщик</th>-->
                 <th>Оплата</th>
                 <th>Сумма</th>
                 <th>Статус</th>
@@ -16,8 +16,13 @@
             <tbody>
             <tr>
                 <td>{{ Orders.created }}</td>
-                <td>{{ Orders.organisation_payer }}</td>
-                <td>{{ Orders.paid }}</td>
+<!--                <td>{{ Orders.organisation_payer }}</td>-->
+                <td>{% if Orders.paid == False %}
+                    <p>Не оплачено</p>
+                    {% else %}
+                    <p>Оплачено</p>
+                {% endif %}
+                    </td>
                 <td>{{ Orders.total_price }} руб.</td>
                 <td>{{ Orders.status }}</td>
 <!--                <td><a href="/media/{{Orders.order_pdf_file}}">Скачать счет</a></td>-->
