--- a/orders/templates/view_orders.html
+++ b/orders/templates/view_orders.html
@@ -1,51 +1,63 @@
 {% extends 'base.html'%}
-    <title>{% block title %} Список Заказов: {% endblock %}</title>
+<title>{% block title %} Список Заказов: {% endblock %}</title>
 {% block body %}
 
 
 {% if Orders.count > 0 %}
-    <h2>Список Заказов: </h2>
+<h2>Список Заказов: </h2>
 <hr>
 <button type="submit" class="btn btn-primary"
-                    onClick="location.href='{% url 'orders:new_order' %}'">Создать заказ</button>
+        onClick="location.href='{% url 'orders:new_order' %}'">Создать заказ
+</button>
 <div class="row">
     <div class="col-md-12">
         <table class="table table-striped table-hover">
             <thead>
             <tr>
                 <th>Заказ №</th>
-                <th>Total</th>
-<!--                <th>Платильщик</th>-->
-                <th>Оплачено</th>
-<!--                <th>Каменты</th>-->
+                <th>Стоимость</th>
+                <!--                <th>Платильщик</th>-->
+                <th>Оплата</th>
+                <!--                <th>Каменты</th>-->
                 <th>Статус</th>
                 <th>Дата заказа</th>
-<!--                <th>Дата готовности</th>-->
-           </thead>
+                <!--                <th>Дата готовности</th>-->
+            </thead>
             <tbody>
             {% for order in page_obj %}
 
             <tr>
                 <td>{{ order.id }}</td>
-                <td>{{ order.total_price }} руб. </td>
-<!--                <td>{{ order.organisation_payer }}</td>-->
-                <td>{{ order.paid }}</td>
-<!--                <td>{{ order.comments }}</td>-->
+                <td>{{ order.total_price }} руб.</td>
+                <!--                <td>{{ order.organisation_payer }}</td>-->
+                <td>{% if order.paid == False %}
+                    <div class="mb-2">
+                        <code>Не оплачено!</code>
+
+                    </div>
+                    {% else%}
+                    <div class="text-success mb-2">Оплачено
+                    </div>
+                    {% endif %}
+
+                    <!--                    {{ order.paid }}-->
+                </td>
+                <!--                <td>{{ order.comments }}</td>-->
                 <td>{{ order.status }}</td>
                 <td>{{ order.created }}</td>
-<!--                <td>{{ order.date_complete }}</td>-->
+                <!--                <td>{{ order.date_complete }}</td>-->
 
                 {% if order.status.id >= 2 %}
 
-                    <td><a href="{% url 'orders:add_file_in_order' order.id %}">Детализация</a></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
+                <td><a href="{% url 'orders:add_file_in_order' order.id %}">Детализация</a></td>
+                <td></td>
+                <td></td>
+                <td></td>
                 {% else %}
-                    <td><a href="{% url 'orders:add_file_in_order' order.id %}">Детализация</a></td>
-                    <td><a href="{% url 'orders:Delete_order' order.id %}">Удалить</a></td>
-                    <td><a href="{% url 'orders:order_pay' order.id %}">Оплатить</a></td>
-                    <td><a href="{% url 'orders:update_order' order.id %}">Редактировать</a></td>
+                <td><a href="{% url 'orders:add_file_in_order' order.id %}">Детализация</a></td>
+                <td><a href="{% url 'orders:Delete_order' order.id %}">Удалить</a></td>
+                <td><a href="{% url 'orders:order_pay' order.id %}">Оплатить</a></td>
+                <td><a href="{% url 'orders:update_order' order.id %}">Редактировать</a></td>
                 {% endif %}
 
             </tr>
@@ -53,36 +65,36 @@
 
 
             </tbody>
-    </table>
+        </table>
     </div>
 </div>
 
 <!--PAGIATION-->
-    {% if page_obj.has_other_pages %}
-    <nav aria-label="...">
-        <ul class="pagination">
-            {% if page_obj.has_previous %}
-            <li class="page-item">
-                <a class="page-link" href="?page={{page_obj.previous_page_number}}">Предыдущая</a>
-            </li>
-            {% endif %}
-            {% for p in page_obj.paginator.page_range %}
-            {% if page_obj.number == p %}
-            <li class="page-item active" aria-current="page"><a class="page-link" href="{{ p }}">{{ p }}</a></li>
-            {% elif p >= page_obj.number|add:-2 and p <= page_obj.number|add:2 %}
-            <li class="page-item"><a class="page-link" href="?page={{ p }}"> {{ p }}</a></li>
-            {% endif %}
-            {% endfor %}
-            {% if page_obj.has_next %}
-            <li class="page-item active" aria-current="page">
-                <a class="page-link" href="?page={{page_obj.next_page_number}}">Следующая</a>
-            </li>
-            {% endif %}
+{% if page_obj.has_other_pages %}
+<nav aria-label="...">
+    <ul class="pagination">
+        {% if page_obj.has_previous %}
+        <li class="page-item">
+            <a class="page-link" href="?page={{page_obj.previous_page_number}}">Предыдущая</a>
+        </li>
+        {% endif %}
+        {% for p in page_obj.paginator.page_range %}
+        {% if page_obj.number == p %}
+        <li class="page-item active" aria-current="page"><a class="page-link" href="{{ p }}">{{ p }}</a></li>
+        {% elif p >= page_obj.number|add:-2 and p <= page_obj.number|add:2 %}
+        <li class="page-item"><a class="page-link" href="?page={{ p }}"> {{ p }}</a></li>
+        {% endif %}
+        {% endfor %}
+        {% if page_obj.has_next %}
+        <li class="page-item active" aria-current="page">
+            <a class="page-link" href="?page={{page_obj.next_page_number}}">Следующая</a>
+        </li>
+        {% endif %}
 
-        </ul>
-    </nav>
-    {% endif %}
+    </ul>
+</nav>
+{% endif %}
 <!--END PAGINATIONA-->
 
-    {% endif %}
-    {% endblock %}
+{% endif %}
+{% endblock %}
