--- a/orders/templates/orderpay.html
+++ b/orders/templates/orderpay.html
@@ -17,11 +17,16 @@
             <tr>
                 <td>{{ Orders.created }}</td>
 <!--                <td>{{ Orders.organisation_payer }}</td>-->
-                <td>{% if Orders.paid == False %}
-                    <p>Не оплачено</p>
-                    {% else %}
-                    <p>Оплачено</p>
-                {% endif %}
+                <td>
+                      {% if Orders.paid == False %}
+                    <div class="mb-2">
+                        <code>Не оплачено</code>
+
+                    </div>
+                    {% else%}
+                    <div class="text-success mb-2">Оплачено
+                    </div>
+                    {% endif %}
                     </td>
                 <td>{{ Orders.total_price }} руб.</td>
                 <td>{{ Orders.status }}</td>
