add form complite pay order

--- a/files/templates/base.html
+++ b/files/templates/base.html
@@ -101,27 +101,27 @@
             <hr class="sidebar-divider">
 
             <!-- Heading -->
-            <div class="sidebar-heading">
-                Addons
-            </div>
+<!--            <div class="sidebar-heading">-->
+<!--                Addons-->
+<!--            </div>-->
 
-            <!-- Nav Item - Pages Collapse Menu -->
-            <li class="nav-item active">
-                <a class="nav-link" href="#" data-toggle="collapse" data-target="#collapsePages" aria-expanded="true"
-                    aria-controls="collapsePages">
-                    <i class="fas fa-fw fa-folder"></i>
-                    <span>Доставка</span>
-                </a>
-                <div id="collapsePages" class="collapse" aria-labelledby="headingPages"
-                    data-parent="#accordionSidebar">
-                    <div class="bg-white py-2 collapse-inner rounded">
-                        <h6 class="collapse-header">Управление доставкой:</h6>
-                        <a class="collapse-item" href="{% url 'account:delivery_list' %}">Адреса</a>
-                        <a class="collapse-item" href="#">Добавить адрес</a>
-                        <a class="collapse-item" href="#">Удалить адрес</a>
-                    </div>
-                </div>
-            </li>
+<!--            &lt;!&ndash; Nav Item - Pages Collapse Menu &ndash;&gt;-->
+<!--            <li class="nav-item active">-->
+<!--                <a class="nav-link" href="#" data-toggle="collapse" data-target="#collapsePages" aria-expanded="true"-->
+<!--                    aria-controls="collapsePages">-->
+<!--                    <i class="fas fa-fw fa-folder"></i>-->
+<!--                    <span>Доставка</span>-->
+<!--                </a>-->
+<!--                <div id="collapsePages" class="collapse" aria-labelledby="headingPages"-->
+<!--                    data-parent="#accordionSidebar">-->
+<!--                    <div class="bg-white py-2 collapse-inner rounded">-->
+<!--                        <h6 class="collapse-header">Управление доставкой:</h6>-->
+<!--                        <a class="collapse-item" href="{% url 'account:delivery_list' %}">Адреса</a>-->
+<!--                        <a class="collapse-item" href="#">Добавить адрес</a>-->
+<!--                        <a class="collapse-item" href="#">Удалить адрес</a>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </li>-->
 
             <!-- Nav Item - Charts -->
 <!--            <li class="nav-item">-->
