--- a/orders/templates/orders/success_pay.html
+++ b/orders/templates/orders/success_pay.html
@@ -42,7 +42,8 @@
                                     <div class="text-center">
                                         <h1 class="h4 text-gray-900 mb-4">Успешная оплата!</h1>
                                     </div>
-
+                                    <p>Чек об оплате направлен вам на почту</p>
+                                    <p>Заказ поступил в работу</p>
                                     <hr>
 
 
