--- a/orders/templates/add_files_in_order.html
+++ b/orders/templates/add_files_in_order.html
@@ -139,10 +139,15 @@
         </td>
 {% else %}
 <!--                    <td><a href="/media/{{Orders.order_pdf_file}}">Скачать счет</a></td>-->
-                    <td>
 
-<button type="submit" class="btn btn-primary"
+                             {% if Orders.paid == False %}
+                    <td>
+     <button type="submit" class="btn btn-primary"
         onClick="location.href='{{Orders.pay_link}}'">Оплатить картой</button> </td>
+
+                    {% endif %}
+
+
 
 {% endif %}
 
