--- a/orders/templates/report_complite_orders.html
+++ b/orders/templates/report_complite_orders.html
@@ -28,8 +28,8 @@
         <table class="table table-striped table-hover">
             <thead>
             <tr>
-                <th>total_price</th>
-                <th>cost_total_price</th>
+                <th>Продажа</th>
+                <th>Себестоимость</th>
                 <th>organisation_payer</th>
                 <th>created</th>
                 <th>Contractor</th>
