--- a/orders/templates/orders/success_pay.html
+++ b/orders/templates/orders/success_pay.html
@@ -45,6 +45,9 @@
                                     <p>Чек об оплате направлен вам на почту</p>
                                     <p>Заказ поступил в работу</p>
                                     <hr>
+                                    <button type="submit" class="btn btn-primary"
+        onClick="location.href='{% url 'orders:view_orders' %}'">К заказам
+</button>
 
 
                                 </div>
