--- a/info/templates/info/index.html
+++ b/info/templates/info/index.html
@@ -1,14 +1,2 @@
-{% extends 'info/base_info.html' %}
-
-{% block content %}
-<h1>{{title}}</h1>
-<p>Содержимое страницы</p>
-
-{% for inf in info %}
-<p>{{ inf.id }}</p>
-<p>Заголовок: {{inf.title}}</p>
-<p>текст: {{inf.context}}</p>
-{% endfor %}
-
-
-{% endblock %}
+<p>Сообщение:{{message}}</p>
+<p>Тел:{{phone}}</p>
