--- a/info/templates/info/base_info.html
+++ b/info/templates/info/base_info.html
@@ -1,24 +1,19 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link type="text/css" href="{% static 'info/css/styles.css' %}" rel="stylesheet" />
+    <link href="{% static 'css/style_san.css' %}" rel="stylesheet">
+    <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
+    <link href="{% static 'css/default.css' %}" rel="stylesheet">
+
 
     <title>{{ title }}</title>
 </head>
 <body>
-{% block mainmenu %}
-<ul>
-    {% for m in menu %}
-    <li>
-        {{ m }}
 
-
-    </li>
-    {% endfor %}
-</ul>
-{% endblock mainmenu %}
-{% block content %}
+{% block body %}
 {% endblock %}
 
 </body>
